--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "author": "Red Hat, Inc.",
   "license": "Apache-2.0",
   "scripts": {
-    "test": "tape test/*.js | tap-spec",
-    "lint": "eslint test/*.js app.js bin/*",
+    "test": "jasmine",
+    "lint": "eslint spec/*.js test/*.js app.js bin/*",
     "prepare": "nsp check",
     "coverage": "nyc npm test",
     "coveralls": "nyc npm test && nyc report --reporter=text-lcov | coveralls",
@@ -42,6 +42,7 @@
     "eslint-plugin-promise": "~3.6.0",
     "eslint-plugin-react": "^7.6.1",
     "eslint-plugin-standard": "~3.0.1",
+    "jasmine": "^2.9.0",
     "license-reporter": "^1.1.3",
     "nodeshift": "^1.3.0",
     "nsp": "~3.1.0",
