--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "author": "Red Hat, Inc.",
   "license": "Apache-2.0",
   "scripts": {
-    "test": "tape test/*.js | tap-spec",
+    "test": "nodeunit test",
     "lint": "eslint test/*.js app.js bin/*",
     "prepare": "nsp check",
     "coverage": "nyc npm test",
@@ -51,7 +51,8 @@
     "supertest": "^3.0.0",
     "szero": "^1.0.0",
     "tap-spec": "~4.1.1",
-    "tape": "~4.8.0"
+    "tape": "~4.8.0",
+    "nodeunit": "^0.11.2"
   },
   "dependencies": {
     "body-parser": "^1.18.2",
