Created a tests using mocha framework

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "author": "Red Hat, Inc.",
   "license": "Apache-2.0",
   "scripts": {
-    "test": "tape test/*.js | tap-spec",
+    "test": "mocha",
     "lint": "eslint test/*.js app.js bin/*",
     "prepare": "nsp check",
     "coverage": "nyc npm test",
@@ -43,10 +43,11 @@
     "eslint-plugin-react": "^7.6.1",
     "eslint-plugin-standard": "~3.0.1",
     "license-reporter": "^1.1.3",
+    "mocha": "^5.0.0",
     "nodeshift": "^1.3.0",
     "nsp": "~3.1.0",
     "nyc": "~11.4.1",
-    "openshift-test-assistant": "^0.1.1",
+    "openshift-test-assistant": "^0.2.0",
     "standard-version": "^4.3.0",
     "supertest": "^3.0.0",
     "szero": "^1.0.0",
