--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "author": "Red Hat, Inc.",
   "license": "Apache-2.0",
   "scripts": {
-    "test": "mocha",
+    "test": "mocha test --reporter mocha-junit-reporter",
     "lint": "eslint test/*.js app.js bin/*",
     "prepare": "nsp check",
     "coverage": "nyc npm test",
@@ -44,6 +44,7 @@
     "eslint-plugin-standard": "~3.0.1",
     "license-reporter": "^1.1.3",
     "mocha": "^5.0.0",
+    "mocha-junit-reporter": "^1.17.0",
     "nodeshift": "^1.3.0",
     "nsp": "~3.1.0",
     "nyc": "~11.4.1",
